# grounded-art

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: launch.json
.cursor/rules/: grounded-art.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 30b349769e87_add_redesign_schema.py  a7c2f4e8d1b9_add_feed_item_kind_images_links.py  b130255744cd_create_gallery_and_feed_item_tables.py  c3a7f1d9e2b4_add_data_integrity_constraints.py  d4e8f1a2b3c4_passwordless_auth_and_saved_items.py  d4e8f2a1b3c5_add_account_wallet_and_contact_tables.py  d7c9a2b6e1f4_add_contact_rate_limit_events.py  e5f1a2c3d4b5_check_in_trust_model.py
apps/api/app/: config.py  db.py  deps.py  log_config.py  main.py  models.py  schemas.py  seed.py
apps/api/app/routers/: auth.py  contact.py  feed.py  galleries.py  me.py
apps/api/app/services/: auth.py  check_in.py  email.py  saved.py  wallet.py
apps/api/seed/: feed_items.json  galleries.json
apps/landing/: next.config.ts  (+4 more)
docs/: PLANNING.md  architecture.md  build-spec.md  cloudflare-deployment.md  contact-email-and-abuse.md  content-pipeline.md  data-model.md  deployment.md  design.md  external-dependencies.md  feature-list.md  follow-ups.md  interactions.md  product.md  redesign-plan.md  redesign.md  screencast.md  use-cases.md  v1-status.md  wallet-and-presence.md  workflow.md
tooling/: compare-nav-styles.mjs  dev-local.mjs
(+126 files in other folders)
